Tweak the checkout-table a bit to avoid silly line wrapping.

--- a/client2/src/app/borrowers/borrower-checkouts-table/borrower-checkouts-table.component.css
+++ b/client2/src/app/borrowers/borrower-checkouts-table/borrower-checkouts-table.component.css
@@ -2,3 +2,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+gsl-item-antolin {
+  margin-left: 1em;
+}
